Fixed wrapping in Safari

--- a/build.css
+++ b/build.css
@@ -315,6 +315,7 @@ img {
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
   margin: 0;
+  width: 700px;
 }
 
 .Hero-nav {
